# ChordForge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
src/: Chord.cpp  Chord.h  PianoWidget.cpp  PianoWidget.h  main.cpp
